# Mario

./: .gitignore  CMakeLists.txt  Mario.cbp  Mario.cscope_file_list  Mario.layout  common.h  editor.cpp  editor.h  filetool.cpp  filetool.h  gfxInterface.cpp  input.cpp  level.cpp  math.cpp  math.h  menu.cpp  rectangle.cpp  sound.cpp  sound.h  stringUtility.cpp  stringUtility.h  timer.h
Binary/: Mario.ilk
Binary/handPatterns/: test.xml
Binary/levels/: first.xml
Binary/menu/: menu.xml
Binary/textures/: backgrounds.xml  textures.xml
FMOD/doc/: FMOD Studio Programmers API for Windows.chm
Xmind/: GraphicObject.xmind  Pattern.xmind  Physics.xmind
audioAssets/: sounds.xml
dialogs/: intro.xml
entities/: ECS.cpp  block.cpp  block.h  enemy.cpp  enemy.h  entitiesHandler.h  entityTypes.cpp  object.h  player.cpp  player.h  trigger.cpp  trigger.h
entities/handPatern/: hand.cpp  hand.h  handPattern.cpp  handPattern.h
graphics/: animation.cpp  animation.h  background.cpp  background.h  color.h  gfxParameters.cpp  gfxParameters.h  graphics.cpp  renderDatas.h  surface.cpp  texture.cpp  textureSet.cpp  textureSet.h  viewport.h
graphics/renderers/: renderCoin.cpp  renderDialog.cpp  renderDialog.h  renderEditor.cpp  renderEntity.cpp
handPatterns/: test2.xml
levels/: second.xml
physics/: collisionHandler.cpp  sweepAndPrune.cpp  sweepAndPrune.h
src/: CMakeLists.txt  XMLWriter.cpp  XMLWriter.h  editor.cpp  filetool.h  gfxInterface.h  input.h  level.cpp  level.h  mario.cpp  mario.h  mathUtility.cpp  mathUtility.h  menu.cpp  menu.h  path.cpp  path.h  rectangle.h  sound.cpp  sound.h  timer.cpp  vector.cpp  vector.h  worldEntities.cpp  worldEntities.h
src/entities/: ECS.h  block.cpp  block.h  entitiesHandler.cpp  entitiesHeader.h  entityTypes.h  item.cpp  item.h  object.cpp  player.cpp  player.h  projectile.cpp  projectile.h  trigger.cpp
src/entities/handPatern/: hand.cpp  hand.h  handPattern.cpp  handPattern.h
src/graphics/: animation.cpp  animation.h  background.cpp  background.h  color.cpp  graphics.cpp  graphics.h  surface.h  texture.h  textureSet.cpp  textureSet.h  viewport.cpp  writing.cpp  writing.h
src/graphics/renderers/: renderCoin.cpp  renderCoin.h  renderDialog.cpp  renderEditor.cpp  renderEditor.h  renderEntity.h
src/physics/: collisionHandler.h  phyStack.cpp  phyStack.h  physics.cpp  physics.h  sweepAndPrune.cpp  sweepAndPrune.h
src/ui/: button.cpp  button.h  dialog.cpp
textures/: textures.xml
textures/Sources/: Buttons.xcf
ui/: button.cpp  button.h  dialog.h
